# XplaneServer

./: .gitignore  Makefile  README.md  XplaneServer.sln
XplaneServer/: XplaneServer.vcxproj  XplaneServer.vcxproj.filters
XplaneServer/src/: CMakeLists.txt  main.cpp
XplaneServer/src/Datarefs/: AbstractDataref.h  Dataref.cpp  Dataref.h  DatarefManager.cpp  DatarefManager.h  FFA320Dataref.cpp  FFA320Dataref.h
XplaneServer/src/Network/: IServer.h  Message.h  NetworkUtils.cpp  NetworkUtils.h  UDPBeacon.cpp  UDPBeacon.h  UDPServer.cpp  UDPServer.h
XplaneServer/src/Tools/: Logger.cpp  Logger.h  SharedValue.h  Utils.cpp  Utils.h
XplaneTester/: main.py
